admin can search and manage deleted objects
